Bug 187309 - kfind contunes search after window has been closed
Summary: kfind contunes search after window has been closed
Status: RESOLVED FIXED
Alias: None
Product: kfind
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Andres
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-16 14:51 UTC by Clemens Eisserer
Modified: 2009-04-01 20:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Clemens Eisserer 2009-03-16 14:51:38 UTC
Version:            (using KDE 4.2.1)
Compiler:          gcc 4.4.0 
OS:                Linux
Installed from:    Fedora RPMs

If kfind is closed using the "Close"-Button, it continues its search in background.
I am not sure wether this is a bug or a feature - but I guess those results are lost anways so I file it as but.

This wastes system-resources (RAM, disk-io and CPU cycles) and drains laptop batteries.
Comment 1 Dario Andres 2009-03-27 20:00:48 UTC
After you press the Close button and the KFind window dissapears, does the process "kfind" still exists? This occurs with every search? Have you found some pattern to reproduce the issue?. Thanks
Comment 2 Clemens Eisserer 2009-03-30 12:13:47 UTC
1. Yes, after I press the close button the kfind process still existst for some seconds up to some minutes draining my battery.

2. Don't know if it happens for any search.

3. Howto reproduce:
- Search in a directory containing lots of data
- Do a fulltext-search, for * as filename
- Press close
- The kfind process doesn't disappear immediatly and continues to do IO and consume cpu cycles.
Comment 3 Dario Andres 2009-04-01 20:04:37 UTC
I have reproduce the bug on 4.3trunk. I'm going to investigate it
Thanks
Comment 4 Clemens Eisserer 2009-04-01 20:06:01 UTC
Thanks for looking at it :)
Comment 5 Dario Andres 2009-04-01 20:11:58 UTC
As a workaround, don't use the "Close" button, but just close the app with the "X" on the window title or with the keyboard shortcut to close a window (Alt+F4)
Comment 6 Dario Andres 2009-04-01 20:33:08 UTC
SVN commit 947937 by darioandres:

Properly stop the query and close the dialog when closing the dialog's "Close" button

BUG: 187309


 M  +6 -2      kfinddlg.cpp  
 M  +2 -1      kfinddlg.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=947937
Comment 7 Dario Andres 2009-04-01 20:42:11 UTC
SVN commit 947942 by darioandres:

Backport to 4.2branch of:

SVN commit 947937 by darioandres:

Properly stop the query and close the dialog when closing the dialog's "Close"
button

CCBUG: 187309


 M  +7 -3      kfinddlg.cpp  
 M  +2 -1      kfinddlg.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=947942