Properly stop the query and close the dialog when closing the dialog's "Close" button

BUG: 187309

svn path=/trunk/KDE/kdebase/apps/; revision=947937