kfind/kfinddlg.h
@@ -46,7 +46,6 @@ public:
   void setProgressMsg(const QString &);
 
 private:
-  void closeEvent(QCloseEvent *);
   /*Return a QStringList of all subdirs of d*/
   QStringList getAllSubdirs(QDir d);
 
@@ -61,6 +60,8 @@ public Q_SLOTS:
   void  about ();
   void slotDeleteItem(const QString&);
   void slotNewItems( const QString&  );
+  
+  void finishAndClose();
 
 Q_SIGNALS:
   void haveResults(bool);
